[workspace]
members = [
  "asyncstd-stream",
  "lib",
  "tokio-consumer",
  "tokio-stream"
]

[workspace.package]
version = "0.1.0"
authors = ["Sailrs GmbH"]
edition = "2021"

[workspace.dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
clap = { version = "4.0.8", features = ["env", "derive"] }
futures = "0.3.24"
log = "0.4.17"
rdkafka = { version = "0.25.0", features = ["ssl", "cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
