[workspace]
members = [
    "asyncstd",
    "lib",
    "tokio-consumer",
    "tokio-stream",
    "zeou",
]

[workspace.package]
authors = ["Sailrs GmbH"]
description = "Kafka workers - blazingly fast"
edition = "2021"
rust-version = "1.64.0"
version = "0.1.0"

[workspace.dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
clap = { version = "4.0.8", features = ["env", "derive"] }
futures = "0.3.24"
log = "0.4.17"
rdkafka = { version = "0.28.0", features = ["ssl", "cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
