[package]
name = "asyncstd-stream"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-std = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
futures = { workspace = true }
log = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
