[package]
name = "tokio-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
lib = { path = "../lib" }
futures = { workspace = true }
log = { workspace = true }
rand = "0.8.5"
rdkafka = { workspace = true }
tokio = { workspace = true }
